# WhistleDetection

./: CMakeLists.txt  README  README.md  example.cpp  soundcapturing.cpp  soundcapturing.h
data/: whistle-classifier.tflite
soundcapturing/: CMakeLists.txt  soundcapturing.cpp  soundcapturing.h
tfliteexecuter/: CMakeLists.txt  tfliteexecuter.cpp
whistle/: CMakeLists.txt  algorithm_ext.h  fftw_allocator.h  ring_buffer.h  whistledetection.cpp  whistledetection.h
whistledetection/: CMakeLists.txt  fftw_allocator.h  tflitewhistledetection.cpp  tflitewhistledetection.h
